<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horiztop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <ImageView
        android:id="@+id/iv_weather_icon"
        android:layout_width="161dp"
        android:layout_height="175dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertright"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_vertleft"
        app:layout_constraintTop_toTopOf="@+id/gl_horiztop"
        app:layout_constraintWidth_percent=".92"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/weather_state"
        android:theme="@style/WeatherTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_weather_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_city_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/city_temperature"
        android:textSize="24sp"
        android:theme="@style/WeatherTextView"
        app:layout_constraintEnd_toEndOf="@+id/tv_state"
        app:layout_constraintStart_toStartOf="@+id/tv_state"
        app:layout_constraintTop_toBottomOf="@+id/tv_state" />

    <TextView
        android:id="@+id/tv_feels_like_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/city_temperature"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintBottom_toBottomOf="@+id/tv_feels_like"
        app:layout_constraintEnd_toEndOf="@+id/tv_city_temperature"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toEndOf="@+id/tv_feels_like"
        app:layout_constraintTop_toTopOf="@+id/tv_feels_like"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".44" />

    <TextView
        android:id="@+id/tv_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/feels_like"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintEnd_toEndOf="@+id/iv_weather_icon"
        app:layout_constraintStart_toStartOf="@+id/gl_vertleft"
        app:layout_constraintTop_toBottomOf="@+id/tv_city_temperature" />

    <TextView
        android:id="@+id/tv_wind_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/wind_direction"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintStart_toStartOf="@+id/tv_wind_speed"
        app:layout_constraintTop_toBottomOf="@+id/tv_wind_speed" />

    <TextView
        android:id="@+id/tv_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/pressure"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintStart_toStartOf="@+id/tv_feels_like"
        app:layout_constraintTop_toBottomOf="@+id/tv_feels_like_state" />

    <TextView
        android:id="@+id/tv_wind_speed_ms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed_value"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wind_speed"
        app:layout_constraintEnd_toEndOf="@+id/tv_pressure_mmhg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_wind_speed"
        app:layout_constraintTop_toTopOf="@+id/tv_wind_speed"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".44" />

    <TextView
        android:id="@+id/tv_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/wind_speed"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintStart_toStartOf="@+id/tv_pressure"
        app:layout_constraintTop_toBottomOf="@+id/tv_pressure" />

    <TextView
        android:id="@+id/tv_wind_direction_compass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wind_ne"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintEnd_toEndOf="@+id/tv_wind_speed_ms"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_wind_direction"
        app:layout_constraintTop_toTopOf="@+id/tv_wind_direction"
        app:layout_constraintWidth_percent=".44" />

    <TextView
        android:id="@+id/tv_pressure_mmhg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/pressure_value"
        android:theme="@style/WeatherTextViewAddition"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pressure"
        app:layout_constraintEnd_toEndOf="@+id/tv_feels_like_state"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toEndOf="@+id/tv_pressure"
        app:layout_constraintTop_toTopOf="@+id/tv_pressure"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".44" />

</androidx.constraintlayout.widget.ConstraintLayout>